# agentic-rag-eval

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
data/processed/: passages.parquet
data/subsets/: stratification_report.json  train_subset.parquet
docker/: .dockerignore  Dockerfile  docker-compose.yml
prompts/: decompose.yaml  failure_classify.yaml  judge_coherence.yaml  judge_completeness.yaml  reason.yaml
results/: ablation_comparison.csv  ablation_dense_only.duckdb  ablation_hybrid_only.duckdb  ablation_no_decomp.duckdb  ablation_no_reranker.duckdb  ablation_sparse_only.duckdb  ablation_steps_1.duckdb  ablation_steps_2.duckdb  ablation_steps_3.duckdb  bootstrap_ci.csv  metrics_comparison.csv  paired_significance.csv  qualitative_examples.txt  routing_breakdown.csv
scripts/: analyze_results.py  bootstrap_ci.py  check_vm.sh  generate_paper_figures.py  inspect_schema.py  paired_significance.py  qualitative_analysis.py  routing_breakdown.py  run_eval_tmux.sh  vm_setup.sh
src/agentic_rag_eval/: config.py  eval_run_id.py  logging_setup.py  schemas.py
src/agentic_rag_eval/agent/: __init__.py  decomposer.py  memory.py  react_agent.py
src/agentic_rag_eval/baseline/: __init__.py  naive_rag.py  run_baseline.py
src/agentic_rag_eval/data/: __init__.py  index_passages.py  loader.py  passages.py  seed.py  subset.py  validate.py
src/agentic_rag_eval/evaluation/: __init__.py  comparison.py  deepeval_evaluator.py  failure_classifier.py  hotpotqa_metrics.py  judge.py  ragas_evaluator.py  retrieval_metrics.py  run_eval.py  runner.py
src/agentic_rag_eval/llm/: __init__.py  client.py
src/agentic_rag_eval/prompts/: __init__.py  loader.py
src/agentic_rag_eval/retrieval/: __init__.py  adaptive.py  embeddings.py  qdrant_client.py  reranker.py  retriever.py  strategy_selector.py
src/agentic_rag_eval/serving/: __init__.py  app.py  auth.py  deps.py  validators.py
src/agentic_rag_eval/tracing/: __init__.py  cleanup.py  logger.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: base.html  dashboard.html  run_detail.html  traces.html
tests/: conftest.py
tests/integration/agent/: test_end_to_end.py
tests/integration/data/: test_loader.py
tests/integration/retrieval/: test_retriever.py
tests/integration/serving/: test_query.py
tests/smoke/: test_docker_compose.py  test_health.py
tests/unit/agent/: test_decomposer.py  test_memory.py  test_react_agent.py
tests/unit/baseline/: test_naive_rag.py
(+25 files in other folders)
