[project]
name = "agentic-rag-eval"
version = "0.1.0"
description = "Multi-Hop Agentic RAG with Systematic Evaluation — HotpotQA benchmark with Qdrant, LangGraph, Mem0, RAGAS, DeepEval, LLM-as-Judge."
authors = [{ name = "Sheroz Shaikh" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  # API + serving
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "jinja2>=3.1.4",
  "slowapi>=0.1.9",
  "httpx>=0.27.0",

  # Logging + resilience
  "python-json-logger>=2.0.7",
  "tenacity>=9.0.0",

  # LLM clients
  "openai>=1.54.0",  # OpenAI-compatible client (used for Ollama + OpenRouter + Google AI Studio)

  # Vector DB + embeddings
  "qdrant-client[fastembed]>=1.12.0",
  "fastembed>=0.4.0",

  # Re-ranker
  "sentence-transformers>=3.3.0",

  # Agent framework + memory
  "langgraph>=0.2.50",
  "langchain-core>=0.3.20",
  "mem0ai>=0.1.30",

  # Evaluation libraries
  "ragas>=0.2.6",
  "deepeval>=2.0.0",
  "datasets>=3.1.0",

  # Storage + analytics
  "duckdb>=1.1.3",
  "pandas>=2.2.3",
  "numpy>=1.26.4,<2.0.0",
  "pyarrow>=18.0.0",
  "scipy>=1.14.1",

  # Utilities
  "pyyaml>=6.0.2",
  "tqdm>=4.67.0",
  "click>=8.1.7",
  "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
agentic-rag-eval = "agentic_rag_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "unit: fast unit tests",
  "integration: integration tests (may hit Qdrant/Ollama/API)",
  "smoke: smoke tests for deployed system",
  "slow: slow end-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI's Depends() in argument defaults is intentional DI pattern
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
